welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: value JEAN
	JEAN NEYMAR
        ^